--- a/index.css
+++ b/index.css
@@ -77,6 +77,7 @@ body {
     text-align: center;
     white-space: break-spaces;
     font-size: 22px;
+    font-weight: 600;
     box-shadow: 0px 0px 300px 0px rgb(122, 6, 255);
 }
 .card:first-child {
